--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
             "title": "Quick Start guide",
             "description": "This is the complete template for LiveLabs content developers",
             "type": "livelabs",
-            "filename": "../../livelabs-template.md"
+            "filename": "livelabs-template.md"
         }
     ]
 }
